fixed overflow with css

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,7 +8,7 @@
 
 html,
 body {
-    height: 100vh;
+    height: 100%;
 }
 
 html {
@@ -171,6 +171,7 @@ main {
     flex-grow: 1;
     height: 100%;
     background-color: cornflowerblue;
+    overflow: auto;
 
     .container {
         background-color: #fff;
@@ -210,6 +211,13 @@ main {
     }
 
     @media (min-width: 768px) {
-        overflow: scroll;
+        .entry {
+            overflow: scroll;
+        }
     }
+}
+
+// FOOTER STYLES
+footer {
+    background-color: gainsboro;
 }
